--- a/style.css
+++ b/style.css
@@ -180,11 +180,11 @@
 }
 /* ---------------------- end navber csss -------------------------------- */
 
-/* -------------------------------------- */
-.homePageDev {
-  margin-top: 100px;
-}
-/* ---------------------------- */
+/* ---------------------- start book view csss -------------------------------- */
+
+/* ---------------------- end book view csss -------------------------------- */
+
+/* --------------------------- */
 .booksDev {
   display: grid;
   grid-template-columns: auto auto auto auto auto;
