--- a/style.css
+++ b/style.css
@@ -1,4 +1,15 @@
 /* ---------------------- start navber csss -------------------------------- */
+/* ---------------------search ber ------------------- */
+.searchBer input{
+ height: 25px;
+ width: 250px;
+ border-radius: 5px;
+ border: .5px solid gray;
+}
+.searchBer input:focus{
+ outline: none;
+}
+/* ---------------------search ber ------------------- */
 *::after,
 *::before {
   box-sizing: border-box;
@@ -17,7 +28,7 @@
 
 .container {
   max-width: 1200px;
-  width: 90%;
+  width: 95%;
   margin: auto;
   position: relative;
 }
@@ -130,10 +141,11 @@
   }
 
   .navbar .menu-items {
+    margin-top: 0;
     padding-top: 100px;
     background: #fff;
     height: 100vh;
-    max-width: 300px;
+    max-width: 250px;
     transform: translate(-150%);
     display: flex;
     flex-direction: column;
@@ -251,7 +263,6 @@
   border: none;
   cursor: pointer;
 }
-
 .pagination-btn:disabled {
   background-color: #ccc;
   cursor: not-allowed;
@@ -277,5 +288,41 @@
   padding: 5px 10px;
   cursor: pointer;
 }
-
 /* ---------------------- end wishlist csss -------------------------------- */
+
+/* ---------------------Start Book Details css -------------------------- */
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.modal-content {
+  background-color: #fff;
+  margin: 10% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+  max-width: 600px;
+}
+
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
+/* ----------------------------- end book details css ------------------- */
