--- a/style.css
+++ b/style.css
@@ -9,245 +9,8 @@
 .searchBer input:focus{
  outline: none;
 }
-/* ---------------------search ber ------------------- */
-*::after,
-*::before {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
-
-.html {
-  font-size: 62.5%;
-}
-
-.navbar input[type="checkbox"],
-.navbar .hamburger-lines {
-  display: none;
-}
-
-.container {
-  max-width: 1200px;
-  width: 95%;
-  margin: auto;
-  position: relative;
-}
-
-.navbar {
-  position: fixed;
-  box-shadow: 0px 5px 10px 0px #aaa;
-  width: 100%;
-  top: 0;
-  background: #fff;
-  color: #000;
-  opacity: 0.85;
-  z-index: 100;
-}
-
-.navbar-container {
-  display: flex;
-  justify-content: space-between;
-  height: 64px;
-  align-items: center;
-}
-
-.menu-items {
-  order: 2;
-  display: flex;
-}
-.logo {
-  order: 1;
-  font-size: 2.3rem;
-}
-
-.menu-items li {
-  list-style: none;
-  margin-left: 1.5rem;
-  font-size: 1.3rem;
-}
-
-.navbar a {
-  color: #444;
-  text-decoration: none;
-  font-weight: 500;
-  transition: color 0.3s ease-in-out;
-}
-
-.navbar a:hover {
-  color: #117964;
-}
-
-@media (max-width: 768px) {
-  .navbar {
-    opacity: 0.95;
-  }
-
-  .navbar-container input[type="checkbox"],
-  .navbar-container .hamburger-lines {
-    display: block;
-  }
-
-  .navbar-container {
-    display: block;
-    position: relative;
-    height: 64px;
-  }
-
-  .navbar-container input[type="checkbox"] {
-    position: absolute;
-    display: block;
-    height: 22px;
-    width: 20px;
-    top: 20px;
-    left: 20px;
-    z-index: 5;
-    opacity: 0;
-    cursor: pointer;
-  }
-
-  .navbar-container .hamburger-lines {
-    display: block;
-    height: 20px;
-    width: 25px;
-    position: absolute;
-    top: 20px;
-    left: 20px;
-    z-index: 2;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-  }
-
-  .navbar-container .hamburger-lines .line {
-    display: block;
-    height: 4px;
-    width: 100%;
-    border-radius: 10px;
-    background: #333;
-  }
-
-  .navbar-container .hamburger-lines .line1 {
-    transform-origin: 0% 0%;
-    transition: transform 0.3s ease-in-out;
-  }
-
-  .navbar-container .hamburger-lines .line2 {
-    transition: transform 0.2s ease-in-out;
-  }
-
-  .navbar-container .hamburger-lines .line3 {
-    transform-origin: 0% 100%;
-    transition: transform 0.3s ease-in-out;
-  }
-
-  .navbar .menu-items {
-    margin-top: 0;
-    padding-top: 100px;
-    background: #fff;
-    height: 100vh;
-    max-width: 250px;
-    transform: translate(-150%);
-    display: flex;
-    flex-direction: column;
-    margin-left: -40px;
-    padding-left: 40px;
-    transition: transform 0.5s ease-in-out;
-    box-shadow: 5px 0px 10px 0px #aaa;
-    overflow: scroll;
-  }
-
-  .navbar .menu-items li {
-    margin-bottom: 1.8rem;
-    font-size: 1.1rem;
-    font-weight: 500;
-  }
-
-  .logo {
-    position: absolute;
-    top: 17px;
-    right: 20px;
-  }
-
-  .navbar-container input[type="checkbox"]:checked ~ .menu-items {
-    transform: translateX(0);
-  }
-
-  .navbar-container input[type="checkbox"]:checked ~ .hamburger-lines .line1 {
-    transform: rotate(45deg);
-  }
-
-  .navbar-container input[type="checkbox"]:checked ~ .hamburger-lines .line2 {
-    transform: scaleY(0);
-  }
-
-  .navbar-container input[type="checkbox"]:checked ~ .hamburger-lines .line3 {
-    transform: rotate(-45deg);
-  }
-}
-
-@media (max-width: 500px) {
-  .navbar-container input[type="checkbox"]:checked ~ .logo {
-    display: none;
-  }
-}
-/* ---------------------- end navber csss -------------------------------- */
-
-/* ---------------------- start book view csss -------------------------------- */
-
-/* ---------------------- end book view csss -------------------------------- */
 
 /* --------------------------- */
-.booksDev {
-  display: grid;
-  grid-template-columns: auto auto auto auto auto;
-}
-/* ---------------------- start loading csss -------------------------------- */
-.devLoader{
-  display: flex;
-  justify-content: center;
-  align-items: center;
- height: 70vh;
-}
-.loader {
-  width: 40px;
-  aspect-ratio: 1;
-  display: grid;
-}
-.loader::before,
-.loader::after {
-  content: "";
-  grid-area: 1/1;
-  --c:no-repeat linear-gradient(#046D8B 0 0);
-  background:
-    var(--c) 0 0,
-    var(--c) 100% 0,
-    var(--c) 100% 100%,
-    var(--c) 0 100%;
-  animation: 
-    l10-1 2s infinite linear,
-    l10-2 2s infinite linear;
-}
-.loader::after {
-  margin: 25%;
-  transform: scale(-1);
-}
-@keyframes l10-1 {
-  0%   {background-size: 0    4px,4px 0   ,0    4px,4px 0   }
-  12.5%{background-size: 100% 4px,4px 0   ,0    4px,4px 0   }
-  25%  {background-size: 100% 4px,4px 100%,0    4px,4px 0   }
-  37.5%{background-size: 100% 4px,4px 100%,100% 4px,4px 0   }
-  45%,
-  55%  {background-size: 100% 4px,4px 100%,100% 4px,4px 100%}
-  62.5%{background-size: 0    4px,4px 100%,100% 4px,4px 100%}
-  75%  {background-size: 0    4px,4px 0   ,100% 4px,4px 100%}
-  87.5%{background-size: 0    4px,4px 0   ,0    4px,4px 100%}
-  100% {background-size: 0    4px,4px 0   ,0    4px,4px 0   }
-}
-@keyframes l10-2 {
-  0%,49.9%{background-position: 0 0   ,100% 0   ,100% 100%,0 100%}
-  50%,100%{background-position: 100% 0,100% 100%,0    100%,0 0   }
-}
-/* ---------------------- end loading csss -------------------------------- */
 
 /* ---------------------- start pagination csss -------------------------------- */
 .paginationAlignment{
@@ -290,39 +53,29 @@
 }
 /* ---------------------- end wishlist csss -------------------------------- */
 
-/* ---------------------Start Book Details css -------------------------- */
-.modal {
-  display: none;
-  position: fixed;
-  z-index: 1;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-  background-color: rgba(0, 0, 0, 0.5);
+/* -------------------------------- */
+.searchBer {
+  position: relative;
+  display: inline-block;
 }
 
-.modal-content {
-  background-color: #fff;
-  margin: 10% auto;
-  padding: 20px;
-  border: 1px solid #888;
-  width: 80%;
-  max-width: 600px;
+#search-input {
+  padding: 8px;
+  font-size: 16px;
 }
 
-.close {
-  color: #aaa;
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
-}
-
-.close:hover,
-.close:focus {
-  color: #000;
-  text-decoration: none;
+#close-btn {
+  position: absolute;
+  right: 10px;
+  top: 50%;
+  transform: translateY(-50%);
+  background-color: transparent;
+  border: none;
+  font-size: 16px;
+  color: red;
   cursor: pointer;
 }
-/* ----------------------------- end book details css ------------------- */
+
+#close-btn:hover {
+  color: darkred;
+}
