--- a/src/css/books.css
+++ b/src/css/books.css
@@ -7,17 +7,18 @@
 /* ---------------------- start book view csss -------------------------------- */
 .book-item > div {
   /* background-color: rgb(147, 145, 179); */
-  box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
+  box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px,
+    rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
   border-radius: 3px;
   min-width: 270px;
   max-width: 330px;
   color: rgb(90, 90, 90);
-  transition: .9s;
+  transition: 0.9s;
   /* margin: 3px; */
   /* border-radius: 5px; */
 }
 .book-item > div:hover {
-    box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
 }
 /* ------ image dev--------- */
 .book-item .imgDiv {
@@ -53,18 +54,18 @@
   color: rgb(94, 94, 94);
   cursor: pointer;
 }
-.book-item .bookDetailsAuthor{
-    margin-top: 10px;
-    margin-bottom: 10px;
+.book-item .bookDetailsAuthor {
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
-.book-item .bookDetailsSubject{
-    margin: 0;
+.book-item .bookDetailsSubject {
+  margin: 0;
 }
-.book-item .bookDetailsId{
-    margin-top: 10px;
+.book-item .bookDetailsId {
+  margin-top: 10px;
 }
 
- .book-item .wishlist-btn {
+.book-item .wishlist-btn {
   position: absolute;
   bottom: 10px;
   left: 10px;
@@ -74,12 +75,13 @@
   padding: 6px 9px;
   border-radius: 2px;
   background-color: rgb(236, 236, 236);
-  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
-  transition:  0.9s, transform 0.9s; 
+  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
+    rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+  transition: 0.9s, transform 0.9s;
 }
-.book-item .wishlist-btn:hover{
-    color: white;
-    background-color: rgb(155, 155, 155);
+.book-item .wishlist-btn:hover {
+  color: white;
+  background-color: rgb(155, 155, 155);
 }
 .book-item .viewDetailBtn {
   position: absolute;
@@ -91,12 +93,74 @@
   padding: 6px 9px;
   border-radius: 2px;
   background-color: rgb(236, 236, 236);
-  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
-  transition:  0.5s, transform 0.5s; 
+  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
+    rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+  transition: 0.5s, transform 0.5s;
 }
 .book-item .viewDetailBtn:hover {
-    color: white;
-    background-color: rgb(155, 155, 155);
+  color: white;
+  background-color: rgb(155, 155, 155);
+}
+
+@media (max-width: 1240px) {
+  .booksDev {
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    gap: 20px;
+  }
+}
+@media (max-width: 1200px) {
+  .container {
+    width: 98%;
+  }
+}
+@media (max-width: 1165px) {
+  .book-item > div {
+    min-width: 265px;
+  }
+}
+@media (max-width: 1145px) {
+  .container {
+    width: 92%;
+  }
+  .booksDev {
+    display: grid;
+    grid-template-columns: auto auto auto;
+    gap: 30px;
+  }
+}
+@media (max-width: 930px) {
+  .container {
+    width: 95%;
+  }
+  .booksDev {
+    display: grid;
+    grid-template-columns: auto auto auto;
+    gap: 20px;
+  }
+}
+@media (max-width: 885px) {
+  .container {
+    width: 98%;
+  }
+  .booksDev {
+    display: grid;
+    grid-template-columns: auto auto auto;
+    gap: 15px;
+  }
+}
+@media (max-width: 860px) {
+  .container {
+    width: 98%;
+  }
+  .booksDev {
+    display: grid;
+    grid-template-columns: auto auto auto;
+    gap: 15px;
+  }
+  .book-item > div {
+    min-width: 265px;
+  }
 }
 
 /* ---------------------- end book view csss -------------------------------- */
