--- a/src/css/navber.css
+++ b/src/css/navber.css
@@ -27,9 +27,9 @@
   box-shadow: 0px 5px 10px 0px #aaa;
   width: 100%;
   top: 0;
-  background: #fff;
+  background: #eaeaee;
   color: #000;
-  opacity: 0.85;
+  opacity: 1;
   z-index: 100;
 }
 
@@ -50,6 +50,7 @@
 }
 
 .menu-items li {
+  padding: 0;
   list-style: none;
   margin-left: 1.5rem;
   font-size: 1.3rem;
@@ -68,7 +69,7 @@
 
 @media (max-width: 768px) {
   .navbar {
-    opacity: 0.95;
+    opacity: 1;
   }
 
   .navbar-container input[type="checkbox"],
@@ -142,7 +143,7 @@
     padding-left: 40px;
     transition: transform 0.5s ease-in-out;
     box-shadow: 5px 0px 10px 0px #aaa;
-    overflow: scroll;
+    overflow: hidden;
   }
 
   .navbar .menu-items li {
