--- a/style.css
+++ b/style.css
@@ -1,13 +1,17 @@
 /* ---------------------- start navber csss -------------------------------- */
 /* ---------------------search ber ------------------- */
 .searchBer input{
- height: 25px;
- width: 250px;
+ height: 20px;
+ width: 400px;
  border-radius: 5px;
  border: .5px solid gray;
+ /* display: none; */
 }
 .searchBer input:focus{
  outline: none;
+}
+.searchBer button {
+  display: none;
 }
 
 /* --------------------------- */
@@ -31,27 +35,9 @@
   cursor: not-allowed;
 }
 /* ---------------------- end pagination csss -------------------------------- */
-
-/* ---------------------- start wishlist csss -------------------------------- */
-#wishlist-container {
-  margin: 20px 0;
-}
-
-.book {
-  border: 1px solid #ddd;
-  margin: 10px;
-  padding: 10px;
-  border-radius: 5px;
-}
-
-.remove-from-wishlist-btn {
-  background-color: red;
-  color: white;
-  border: none;
-  padding: 5px 10px;
-  cursor: pointer;
-}
-/* ---------------------- end wishlist csss -------------------------------- */
+/* .genreFilter{
+  display: none;
+} */
 
 /* -------------------------------- */
 .searchBer {
