--- a/src/css/wishList.css
+++ b/src/css/wishList.css
@@ -1,3 +1,4 @@
+
 .booksDev {
   display: grid;
   grid-template-columns: auto auto auto auto;
@@ -6,16 +7,13 @@
 
 /* ---------------------- start book view csss -------------------------------- */
 .wishlist-book-item > div {
-  /* background-color: rgb(147, 145, 179); */
   box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px,
     rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
   border-radius: 3px;
   min-width: 270px;
   max-width: 330px;
   color: rgb(90, 90, 90);
-  transition: 0.9s;
-  /* margin: 3px; */
-  /* border-radius: 5px; */
+  transition: 0.9s ;
 }
 .wishlist-book-item > div:hover {
   box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
@@ -27,42 +25,53 @@
   background-color: rgb(234, 234, 235);
   padding: 40px 20px 40px 20px;
   border-radius: 3px 3px 0 0;
-  /* border: 1px solid rgb(255, 0, 0); */
 }
 .wishlist-book-item .imgDiv img {
-  /* border: 1px solid salmon; */
   height: 200px;
   width: 150px;
   border-radius: 3px;
   box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px,
     rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
-  /* height: 200px;
-     width: 150px ;
-    
-     box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px; */
 }
 /* ------------- bookDetailsDiv ------------  */
 .wishlist-book-item .bookDetailsDiv {
   padding: 10px;
-  height: 150px;
+  height: 180px;
   position: relative;
 }
 .wishlist-book-item .bookDetailsDiv h3 {
   margin-top: 5px;
   margin-bottom: 0;
+  display: inline;
   padding: 0;
   color: rgb(94, 94, 94);
   cursor: pointer;
+  transition: .5s, transform .5s;
 }
+.wishlist-book-item .bookDetailsDiv h3:hover{
+  color: rgb(58, 58, 58);
+  text-shadow: 0 1px 0 #ccc,
+  0 2px 0 #c9c9c9,
+  0 3px 0 #bbb,
+  0 4px 0 #b9b9b9,
+  0 5px 0 #aaa,
+  0 6px 1px rgba(0,0,0,.1),
+  0 0 5px rgba(0,0,0,.1),
+  0 1px 3px rgba(0,0,0,.3),
+  0 3px 5px rgba(0,0,0,.2),
+  0 5px 10px rgba(0,0,0,.25),
+  0 10px 10px rgba(0,0,0,.2),
+  0 20px 20px rgba(0,0,0,.15);
+  }
 .wishlist-book-item .bookDetailsAuthor {
-  margin-top: 10px;
-  margin-bottom: 10px;
+  margin-top: 3px;
+  margin-bottom: 5px;
 }
 .wishlist-book-item .bookDetailsSubject {
   margin: 0;
 }
 .wishlist-book-item .bookDetailsId {
-  margin-top: 10px;
+  margin-top: 5px;
 }
 
 .wishlist-book-item .remove-from-wishlist-btn {
@@ -86,3 +95,135 @@
   border: 1px solid rgb(255, 0, 0);;
   border-radius: 0 0 2px 2px;
 }
+
+@media (max-width: 1210px) {
+  .booksDev {
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    gap: 20px;
+  }
+}
+/*  ----------- books size small ----------------------- */
+@media (min-width: 556px) and (max-width: 1180px) {
+  .wishlist-book-item > div {
+    min-width: 250px;
+  }
+  .wishlist-book-item .bookDetailsDiv h3 {
+    font-size: 18px;
+  }
+  .wishlist-book-item .bookDetailsAuthor {
+    font-size: 15px;
+  }
+  .wishlist-book-item .bookDetailsSubject {
+    font-size: 15px;
+  }
+  .wishlist-book-item .bookDetailsId {
+    font-size: 15px;
+  }
+  .wishlist-book-item .wishlist-btn {
+    padding: 4px 5px;
+  }
+  .wishlist-book-item .viewDetailBtn {
+    padding: 4px 5px;
+  }
+}
+
+@media (max-width: 1100px) {
+  .booksDev {
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    gap: 15px;
+  }
+}
+@media (max-width: 1085px) {
+  .booksDev {
+    display: grid;
+    grid-template-columns: auto auto auto;
+    gap: 30px;
+  }
+}
+@media (max-width: 850px) {
+  .booksDev {
+    display: grid;
+    grid-template-columns: auto auto auto;
+    gap: 15px;
+  }
+}
+@media (max-width: 820px) {
+  .booksDev {
+    display: grid;
+    grid-template-columns: auto auto;
+    justify-content: space-between;
+    gap: 30px;
+  }
+  .wishlist-book-item > div {
+    min-width: 330px;
+    max-width: 350px;
+  }
+}
+@media (max-width: 740px) {
+  .booksDev {
+    display: grid;
+    grid-template-columns: auto auto;
+    justify-content: space-between;
+    gap: 30px;
+  }
+  .wishlist-book-item > div {
+    min-width: 320px;
+    max-width: 350px;
+  }
+}
+@media (max-width: 710px) {
+  .booksDev {
+    display: grid;
+    grid-template-columns: auto auto;
+    justify-content: space-between;
+    gap: 20px;
+  }
+  .wishlist-book-item > div {
+    min-width: 300px;
+    max-width: 350px;
+  }
+}
+@media (max-width: 660px) {
+  .wishlist-book-item > div {
+    min-width: 280px;
+    max-width: 350px;
+  }
+}
+@media (max-width: 620px) {
+  .wishlist-book-item > div {
+    min-width: 260px;
+    max-width: 350px;
+  }
+}
+@media (max-width: 580px) {
+  .booksDev {
+    gap: 15px;
+  }
+  .wishlist-book-item > div {
+    min-width: 250px;
+    max-width: 350px;
+  }
+}
+@media (max-width: 580px) {
+  .booksDev {
+    gap: 15px;
+  }
+  .wishlist-book-item > div {
+    min-width: 250px;
+    max-width: 350px;
+  }
+}
+@media (max-width: 555px) {
+  .booksDev {
+    grid-template-columns: auto;
+    justify-content: center;
+  }
+  .wishlist-book-item > div {
+    min-width: 330px;
+    max-width: 350px;
+  }
+}
+
+
