--- a/src/css/navber.css
+++ b/src/css/navber.css
@@ -352,3 +352,31 @@ video {
   top: 0.5rem;
   transform: rotate(-135deg);
 }
+
+
+/* ------------ search ber csss */
+/* .searchBer {
+  position: relative;
+  display: inline-block;
+} */
+
+#search-input {
+  padding: 8px;
+  font-size: 16px;
+}
+
+/* #close-btn {
+  position: absolute;
+  right: 10px;
+  top: 50%;
+  transform: translateY(-50%);
+  background-color: transparent;
+  border: none;
+  font-size: 16px;
+  color: red;
+  cursor: pointer;
+}
+
+#close-btn:hover {
+  color: darkred;
+} */
