--- a/src/css/search.css
+++ b/src/css/search.css
@@ -1,66 +1,11 @@
-/* -------- display books animation */
-
-/* .book-item > div {
-  opacity: 0;
-  transform: translateY(20px);
-  animation: fadeIn 0.5s ease-in-out forwards;
-}
-
-@keyframes fadeIn {
-  0% {
-    opacity: 0;
-    transform: translateY(20px);
-  }
-  100% {
-    opacity: 1;
-    transform: translateY(0);
-  }
-} */
-/* ---------------------------- */
-.booksDiv {
-  height: 100vh;
-  margin-top: 100px !important;
-}
-@media (max-width: 991px) {
-  .booksDiv {
-    margin-top: 150px !important;
-  }
-}
-/* ---------------------------- */
-.genresFilterDiv {
-  background-color: #dddddd;
-  width: 100%;
-  padding: 10px;
-  border-radius: 3px;
-}
-.genresFilterDiv > select {
-  width: 250px;
-  height: 30px;
-  border: 0.5px solid gray;
-  border-radius: 3px;
-}
-.genresFilterDiv > select:focus {
-  outline: none;
-}
-@media (max-width: 800px) {
-  .genresFilterDiv > select {
-    width: 200px;
-  }
-}
-@media (max-width: 500px) {
-  .genresFilterDiv > select {
-    width: 120px;
-  }
-}
-/* ----------------------------- */
 .booksDev {
   display: grid;
   grid-template-columns: auto auto auto auto;
   gap: 30px;
-  margin-top: 20px;
 }
+
 /* ---------------------- start book view csss -------------------------------- */
-.book-item > div {
+.search-book-item > div {
   box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px,
     rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
   border-radius: 3px;
@@ -69,18 +14,18 @@
   color: rgb(90, 90, 90);
   transition: 0.9s;
 }
-.book-item > div:hover {
+.search-book-item > div:hover {
   box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
 }
 /* ------ image dev--------- */
-.book-item .imgDiv {
+.search-book-item .imgDiv {
   display: flex;
   justify-content: center;
   background-color: rgb(234, 234, 235);
   padding: 40px 20px 40px 20px;
   border-radius: 3px 3px 0 0;
 }
-.book-item .imgDiv img {
+.search-book-item .imgDiv img {
   height: 200px;
   width: 150px;
   border-radius: 3px;
@@ -88,12 +33,12 @@
     rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
 }
 /* ------------- bookDetailsDiv ------------  */
-.book-item .bookDetailsDiv {
+.search-book-item .bookDetailsDiv {
   padding: 10px;
   height: 180px;
   position: relative;
 }
-.book-item .bookDetailsDiv h3 {
+.search-book-item .bookDetailsDiv h3 {
   margin-top: 5px;
   margin-bottom: 0;
   display: inline;
@@ -102,7 +47,7 @@
   cursor: pointer;
   transition: 0.5s, transform 0.5s;
 }
-.book-item .bookDetailsDiv h3:hover {
+.search-book-item .bookDetailsDiv h3:hover {
   color: rgb(58, 58, 58);
   text-shadow: 0 1px 0 #ccc, 0 2px 0 #c9c9c9, 0 3px 0 #bbb, 0 4px 0 #b9b9b9,
     0 5px 0 #aaa, 0 6px 1px rgba(0, 0, 0, 0.1), 0 0 5px rgba(0, 0, 0, 0.1),
@@ -110,18 +55,18 @@
     0 5px 10px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.2),
     0 20px 20px rgba(0, 0, 0, 0.15);
 }
-.book-item .bookDetailsAuthor {
+.search-book-item .bookDetailsAuthor {
   margin-top: 3px;
   margin-bottom: 5px;
 }
-.book-item .bookDetailsSubject {
+.search-book-item .bookDetailsSubject {
   margin: 0;
 }
-.book-item .bookDetailsId {
+.search-book-item .bookDetailsId {
   margin-top: 5px;
 }
 
-.book-item .wishlist-btn {
+.search-book-item .wishlist-btn {
   position: absolute;
   bottom: 10px;
   left: 10px;
@@ -135,11 +80,11 @@
     rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
   transition: 0.9s, transform 0.9s;
 }
-.book-item .wishlist-btn:hover {
+.search-book-item .wishlist-btn:hover {
   color: white;
   background-color: rgb(155, 155, 155);
 }
-.book-item .viewDetailBtn {
+.search-book-item .viewDetailBtn {
   position: absolute;
   bottom: 10px;
   right: 10px;
@@ -153,7 +98,7 @@
     rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
   transition: 0.5s, transform 0.5s;
 }
-.book-item .viewDetailBtn:hover {
+.search-book-item .viewDetailBtn:hover {
   color: white;
   background-color: rgb(155, 155, 155);
 }
@@ -167,25 +112,25 @@
 }
 /*  ----------- books size small ----------------------- */
 @media (min-width: 556px) and (max-width: 1180px) {
-  .book-item > div {
+  .search-book-item > div {
     min-width: 250px;
   }
-  .book-item .bookDetailsDiv h3 {
+  .search-book-item .bookDetailsDiv h3 {
     font-size: 18px;
   }
-  .book-item .bookDetailsAuthor {
+  .search-book-item .bookDetailsAuthor {
     font-size: 15px;
   }
-  .book-item .bookDetailsSubject {
+  .search-book-item .bookDetailsSubject {
     font-size: 15px;
   }
-  .book-item .bookDetailsId {
+  .search-book-item .bookDetailsId {
     font-size: 15px;
   }
-  .book-item .wishlist-btn {
+  .search-book-item .wishlist-btn {
     padding: 4px 5px;
   }
-  .book-item .viewDetailBtn {
+  .search-book-item .viewDetailBtn {
     padding: 4px 5px;
   }
 }
@@ -218,7 +163,7 @@
     justify-content: space-between;
     gap: 30px;
   }
-  .book-item > div {
+  .search-book-item > div {
     min-width: 330px;
     max-width: 350px;
   }
@@ -230,7 +175,7 @@
     justify-content: space-between;
     gap: 30px;
   }
-  .book-item > div {
+  .search-book-item > div {
     min-width: 320px;
     max-width: 350px;
   }
@@ -242,19 +187,19 @@
     justify-content: space-between;
     gap: 20px;
   }
-  .book-item > div {
+  .search-book-item > div {
     min-width: 300px;
     max-width: 350px;
   }
 }
 @media (max-width: 660px) {
-  .book-item > div {
+  .search-book-item > div {
     min-width: 280px;
     max-width: 350px;
   }
 }
 @media (max-width: 620px) {
-  .book-item > div {
+  .search-book-item > div {
     min-width: 260px;
     max-width: 350px;
   }
@@ -263,7 +208,7 @@
   .booksDev {
     gap: 15px;
   }
-  .book-item > div {
+  .search-book-item > div {
     min-width: 250px;
     max-width: 350px;
   }
@@ -272,7 +217,7 @@
   .booksDev {
     gap: 15px;
   }
-  .book-item > div {
+  .search-book-item > div {
     min-width: 250px;
     max-width: 350px;
   }
@@ -282,7 +227,7 @@
     grid-template-columns: auto;
     justify-content: center;
   }
-  .book-item > div {
+  .search-book-item > div {
     min-width: 330px;
     max-width: 350px;
   }
