--- a/src/css/search.css
+++ b/src/css/search.css
@@ -1,3 +1,23 @@
+/* -------- display books animation */
+.search-book-item  {
+  opacity: 0;
+  transform: translateY(30px);
+  animation: fadeInUp 1s ease forwards;
+}
+
+@keyframes fadeInUp {
+  0% {
+    opacity: 0;
+    transform: translateY(30px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0px);
+  }
+}
+
+
+/* ------------------------------------- */
 .booksDev {
   display: grid;
   grid-template-columns: auto auto auto auto;
@@ -24,6 +44,7 @@
   background-color: rgb(234, 234, 235);
   padding: 40px 20px 40px 20px;
   border-radius: 3px 3px 0 0;
+  overflow: hidden; 
 }
 .search-book-item .imgDiv img {
   height: 200px;
@@ -31,6 +52,11 @@
   border-radius: 3px;
   box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px,
     rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
+    transition: transform 0.5s ease-in-out;
+    cursor: pointer;
+}
+.search-book-item .imgDiv:hover img {
+  transform: scale(1.1);
 }
 /* ------------- bookDetailsDiv ------------  */
 .search-book-item .bookDetailsDiv {
